Documentation, fix a few chords.